--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,13 +18,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  crop_your_image: ^0.7.1
-  provider: ^5.0.0
+  crop_your_image: ^1.0.1
+  provider: ^6.1.1
   http: ^0.13.1
 
   # The following adds the Cupertino Icons font to your application.
